add fixtures and normalize Perun Model

--- a/.php.env.dist
+++ b/.php.env.dist
@@ -1,1 +1,2 @@
-DATABASE_PERUN_URL=mysql://login:password@host:3306/database?serverVersion=5.7
+#DATABASE_PERUN_URL=mysql://login:password@host:3306/database?serverVersion=5.7
+DATABASE_PERUN_URL=mysql://root:test@mysql:3306/website?serverVersion=5.7
