--- a/.php.env.dist
+++ b/.php.env.dist
@@ -1,2 +1,3 @@
 #DATABASE_PERUN_URL=mysql://login:password@host:3306/database?serverVersion=5.7
+APP_SECRET=0123456789
 DATABASE_PERUN_URL=mysql://root:test@mysql:3306/website?serverVersion=5.7
