add user entity, login form, logout route

--- a/fixtures/perun_online_player.yaml
+++ b/fixtures/perun_online_player.yaml
@@ -1,6 +1,6 @@
 App\Perun\Entity\OnlinePlayer:
   prerun_online_player_public_admin:
-    player: "@prerun_player_public_admin"
+    player: "@perun_player_public_admin"
     ucid: "00001111222233334444555566660001"
     instance: "@perun_instance_public"
     ping: 0
@@ -8,7 +8,7 @@ App\Perun\Entity\OnlinePlayer:
     slot: ""
     updated: "<dateTimeBetween('-1 minute', 'now')>"
   prerun_online_player_private_admin:
-    player: "@prerun_player_private_admin"
+    player: "@perun_player_private_admin"
     ucid: "00001111222233334444555566660002"
     instance: "@perun_instance_private"
     ping: 0
@@ -17,7 +17,7 @@ App\Perun\Entity\OnlinePlayer:
     updated: '<(new DateTime("2021-02-01 12:00:00"))>'
 
   prerun_online_player_zip:
-    player: "@prerun_player_zip"
+    player: "@perun_player_zip"
     ucid: "00001111222233334444555566660003"
     instance: "@perun_instance_public"
     ping: '<numberBetween(15,80)>'
@@ -25,7 +25,7 @@ App\Perun\Entity\OnlinePlayer:
     slot: ""
     updated: "<dateTimeBetween('-1 minute', 'now')>"
   prerun_online_player_mitch:
-    player: "@prerun_player_mitch"
+    player: "@perun_player_mitch"
     ucid: "00001111222233334444555566660004"
     instance: "@perun_instance_public"
     ping: '<numberBetween(60,120)>'
@@ -34,7 +34,7 @@ App\Perun\Entity\OnlinePlayer:
     updated: "<dateTimeBetween('-1 minute', 'now')>"
 
   prerun_online_player_griffin:
-    player: "@prerun_player_griffin"
+    player: "@perun_player_griffin"
     ucid: "00001111222233334444555566660005"
     instance: "@perun_instance_public"
     ping: '<numberBetween(60,120)>'
@@ -43,7 +43,7 @@ App\Perun\Entity\OnlinePlayer:
     updated: "<dateTimeBetween('-1 minute', 'now')>"
 
   prerun_online_player_guest:
-    player: "@prerun_player_guest"
+    player: "@perun_player_guest"
     ucid: "00001111222233334444555566660006"
     instance: "@perun_instance_public"
     ping: '<numberBetween(60,120)>'
