add reset password feature (with link in email)

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,10 @@ PROXY_NETWORK=webproxy
 #PHP_TAG=7.4-buster-dev
 #NGINX_REGISTRY=kilik/nginx
 #NGINX_TAG=symfony-4.x-stretch
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
