--- a/.php.env.dist
+++ b/.php.env.dist
@@ -1,3 +1,9 @@
 #DATABASE_PERUN_URL=mysql://login:password@host:3306/database?serverVersion=5.7
 APP_SECRET=0123456789
 DATABASE_PERUN_URL=mysql://root:test@mysql:3306/website?serverVersion=5.7
+
+# use this to disable email delivery
+MAILER_DSN=null://localhost
+# use this to configure a traditional SMTP server
+##MAILER_DSN=smtp://localhost:465?encryption=ssl&auth_mode=login&username=&password=
+MAIL_FROM=admin@localhost
