--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/proxy-manager-bridge": "4.4.*",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer": "4.4.*",
+        "symfony/swiftmailer-bundle": "^3.5",
         "symfony/translation": "4.4.*",
         "symfony/twig-bundle": "^4.4",
         "symfony/validator": "4.4.*",
@@ -39,6 +40,7 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.18",
         "hautelook/alice-bundle": "^2.8",
         "symfony/browser-kit": "^4.4",
         "symfony/css-selector": "^4.4",
