protect user registration and change password from bots

--- a/.php.env.dist
+++ b/.php.env.dist
@@ -7,3 +7,7 @@ MAILER_DSN=null://localhost
 # use this to configure a traditional SMTP server
 ##MAILER_DSN=smtp://localhost:465?encryption=ssl&auth_mode=login&username=&password=
 MAIL_FROM=admin@localhost
+
+RECAPTCHA3_KEY=my_site_key
+RECAPTCHA3_SECRET=my_secret
+RECAPTCHA3_ENABLED=0
