--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.8",
         "karser/karser-recaptcha3-bundle": "^0.1.15",
         "kilik/table": "^2.5",
+        "knplabs/knp-time-bundle": "^1.15",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
