add form to link dcs player (perun) and user

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,4 +5,6 @@ twig:
     exception_controller: null
     globals:
         cdn_veaf: '%cdn_veaf%'
-    form_themes: ['bootstrap_4_layout.html.twig']
+    form_themes:
+      - 'bootstrap_4_layout.html.twig'
+      - '@TetranzSelect2Entity/Form/fields.html.twig'
