add page, page block, dynamic router, display of pages, and page+block editor

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,7 @@ services:
     App\Controller\ResetPasswordController:
         arguments:
             $mailFrom: "%mail_from%"
+
+    # cms pages routes
+    App\Routing\PageLoader:
+        tags: [routing.loader]
