add image and image header edition on modules, and display themes in landing page

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -41,3 +41,7 @@ services:
     App\Service\FileService:
         arguments:
             $dataDirectory: '%kernel.project_dir%/var/data/files'
+
+    App\Twig\ImageExtension:
+        arguments:
+            $projectDir: '%kernel.project_dir%'
