--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,10 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 2678400 # 31 days in seconds
+                path:     /
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
