--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,13 @@
         "php": ">=7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "eightpoints/guzzle-bundle": "^8.2",
         "gregwar/image-bundle": "^3.0",
         "karser/karser-recaptcha3-bundle": "^0.1.15",
         "kilik/table": "^2.5",
