--- a/config/packages/parameters.yaml
+++ b/config/packages/parameters.yaml
@@ -2,3 +2,4 @@ parameters:
   cdn_veaf: https://cdn.veaf.org/website/dev
   mail_from: "%env(MAIL_FROM)%"
   google_agent: "%env(GOOGLE_AGENT)%"
+  api_slmod_url: "%env(API_SLMOD_URL)%"
