--- a/config/packages/parameters.yaml
+++ b/config/packages/parameters.yaml
@@ -3,3 +3,4 @@ parameters:
   mail_from: "%env(MAIL_FROM)%"
   google_agent: "%env(GOOGLE_AGENT)%"
   api_slmod_url: "%env(API_SLMOD_URL)%"
+  app_version: 0.4.0
