--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -6,6 +6,7 @@ twig:
     globals:
         cdn_veaf: '%cdn_veaf%'
         google_agent: '%google_agent%'
+        app_version: '%app_version%'
     form_themes:
       - 'bootstrap_4_layout.html.twig'
       - '@TetranzSelect2Entity/Form/fields.html.twig'
