--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -5,3 +5,8 @@ controllers:
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
+
+# to force CMS controller at the end
+cms:
+    resource: ../../src/Controller/PageController.php
+    type: annotation
