--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "kilik/table": "^2.5",
         "knplabs/knp-markdown-bundle": "^1.8",
         "knplabs/knp-time-bundle": "^1.15",
+        "ob/highcharts-bundle": "^1.7",
         "phpdocumentor/reflection-docblock": "^5.2",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^6.0",
