fix event description size 255 => 64ko

--- a/fixtures/perun_data_raw.yaml
+++ b/fixtures/perun_data_raw.yaml
@@ -137,11 +137,13 @@ App\Perun\Entity\DataRaw:
   perun_dataraw_public_players:
     instance: "@perun_instance_public"
     type: '<(App\Perun\Entity\DataRaw::TYPE_PLAYERS)>'
+    updated: "<dateTimeBetween('-20 minutes', '-15 minutes')>"
     __calls:
       - setPayload: [<{payloadPlayers}>]
 
   perun_dataraw_public_slots:
     instance: "@perun_instance_public"
     type: '<(App\Perun\Entity\DataRaw::TYPE_SLOTS)>'
+    updated: "<dateTimeBetween('-20 minutes', '-15 minutes')>"
     __calls:
       - setPayload: [<{payloadSlots}>]
